--- a/NetStatus/NetStatus/NetStatus.csproj
+++ b/NetStatus/NetStatus/NetStatus.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AppCenter.Analytics" Version="1.1.0" />
+    <PackageReference Include="Microsoft.AppCenter.Crashes" Version="1.1.0" />
     <PackageReference Include="Microsoft.Net.Http" Version="2.2.29" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="Xam.Plugin.Connectivity" Version="3.0.3" />
